exports[`components/Switch disabled when "false" a default checkbox is rendered 1`] = `
<div
  className=" __style_df"
  style={
    Object {
      "MozBoxSizing": "border-box",
      "MozUserSelect": "none",
      "WebkitAlignItems": "stretch",
      "WebkitBoxAlign": "stretch",
      "WebkitBoxDirection": "normal",
      "WebkitBoxOrient": "vertical",
      "WebkitFlexBasis": "auto",
      "WebkitFlexDirection": "column",
      "WebkitFlexShrink": 0,
      "WebkitUserSelect": "none",
      "alignItems": "stretch",
      "backgroundColor": "transparent",
      "borderBottomStyle": "solid",
      "borderBottomWidth": "0px",
      "borderLeftStyle": "solid",
      "borderLeftWidth": "0px",
      "borderRightStyle": "solid",
      "borderRightWidth": "0px",
      "borderTopStyle": "solid",
      "borderTopWidth": "0px",
      "boxSizing": "border-box",
      "color": "inherit",
      "cursor": "pointer",
      "display": null,
      "flexBasis": "auto",
      "flexDirection": "column",
      "flexShrink": 0,
      "font": "inherit",
      "height": "20px",
      "listStyle": "none",
      "marginBottom": "0px",
      "marginLeft": "0px",
      "marginRight": "0px",
      "marginTop": "0px",
      "minHeight": "0px",
      "minWidth": "0px",
      "msFlexAlign": "stretch",
      "msFlexDirection": "column",
      "msFlexNegative": 0,
      "msPreferredSize": "auto",
      "msUserSelect": "none",
      "paddingBottom": "0px",
      "paddingLeft": "0px",
      "paddingRight": "0px",
      "paddingTop": "0px",
      "position": "relative",
      "textAlign": "inherit",
      "textDecoration": "none",
      "userSelect": "none",
      "width": "40px",
    }
  }>
  <div
    className=" __style_df"
    style={
      Object {
        "MozBoxSizing": "border-box",
        "WebkitAlignItems": "stretch",
        "WebkitBoxAlign": "stretch",
        "WebkitBoxDirection": "normal",
        "WebkitBoxOrient": "vertical",
        "WebkitFlexBasis": "auto",
        "WebkitFlexDirection": "column",
        "WebkitFlexShrink": 0,
        "WebkitTransitionDuration": "0.1s",
        "alignItems": "stretch",
        "backgroundColor": "#939393",
        "borderBottomLeftRadius": "10px",
        "borderBottomRightRadius": "10px",
        "borderBottomStyle": "solid",
        "borderBottomWidth": "0px",
        "borderLeftStyle": "solid",
        "borderLeftWidth": "0px",
        "borderRightStyle": "solid",
        "borderRightWidth": "0px",
        "borderTopLeftRadius": "10px",
        "borderTopRightRadius": "10px",
        "borderTopStyle": "solid",
        "borderTopWidth": "0px",
        "bottom": "0px",
        "boxSizing": "border-box",
        "color": "inherit",
        "display": null,
        "flexBasis": "auto",
        "flexDirection": "column",
        "flexShrink": 0,
        "font": "inherit",
        "height": "70%",
        "left": "0px",
        "listStyle": "none",
        "marginBottom": "auto",
        "marginLeft": "auto",
        "marginRight": "auto",
        "marginTop": "auto",
        "minHeight": "0px",
        "minWidth": "0px",
        "msFlexAlign": "stretch",
        "msFlexDirection": "column",
        "msFlexNegative": 0,
        "msPreferredSize": "auto",
        "paddingBottom": "0px",
        "paddingLeft": "0px",
        "paddingRight": "0px",
        "paddingTop": "0px",
        "position": "absolute",
        "right": "0px",
        "textAlign": "inherit",
        "textDecoration": "none",
        "top": "0px",
        "transitionDuration": "0.1s",
        "width": "90%",
      }
    } />
  <div
    className=" __style_df"
    style={
      Object {
        "MozBoxSizing": "border-box",
        "WebkitAlignItems": "stretch",
        "WebkitAlignSelf": "flex-start",
        "WebkitBoxAlign": "stretch",
        "WebkitBoxDirection": "normal",
        "WebkitBoxOrient": "vertical",
        "WebkitFlexBasis": "auto",
        "WebkitFlexDirection": "column",
        "WebkitFlexShrink": 0,
        "WebkitTransform": "translateX(0%)",
        "WebkitTransitionDuration": "0.1s",
        "alignItems": "stretch",
        "alignSelf": "flex-start",
        "backgroundColor": "#FAFAFA",
        "borderBottomLeftRadius": "100%",
        "borderBottomRightRadius": "100%",
        "borderBottomStyle": "solid",
        "borderBottomWidth": "0px",
        "borderLeftStyle": "solid",
        "borderLeftWidth": "0px",
        "borderRightStyle": "solid",
        "borderRightWidth": "0px",
        "borderTopLeftRadius": "100%",
        "borderTopRightRadius": "100%",
        "borderTopStyle": "solid",
        "borderTopWidth": "0px",
        "boxShadow": "0px 1px 3px rgba(0,0,0,0.5)",
        "boxSizing": "border-box",
        "color": "inherit",
        "display": null,
        "flexBasis": "auto",
        "flexDirection": "column",
        "flexShrink": 0,
        "font": "inherit",
        "height": "20px",
        "listStyle": "none",
        "marginBottom": "0px",
        "marginLeft": "0px",
        "marginRight": "0px",
        "marginTop": "0px",
        "minHeight": "0px",
        "minWidth": "0px",
        "msFlexAlign": "stretch",
        "msFlexDirection": "column",
        "msFlexItemAlign": "start",
        "msFlexNegative": 0,
        "msPreferredSize": "auto",
        "msTransform": "translateX(0%)",
        "paddingBottom": "0px",
        "paddingLeft": "0px",
        "paddingRight": "0px",
        "paddingTop": "0px",
        "position": "relative",
        "textAlign": "inherit",
        "textDecoration": "none",
        "transform": "translateX(0%)",
        "transitionDuration": "0.1s",
        "width": "20px",
      }
    } />
  <input
    checked={false}
    className=""
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    style={
      Object {
        "bottom": "0px",
        "cursor": "inherit",
        "height": "100%",
        "left": "0px",
        "marginBottom": "0px",
        "marginLeft": "0px",
        "marginRight": "0px",
        "marginTop": "0px",
        "opacity": 0,
        "paddingBottom": "0px",
        "paddingLeft": "0px",
        "paddingRight": "0px",
        "paddingTop": "0px",
        "position": "absolute",
        "right": "0px",
        "top": "0px",
        "width": "100%",
      }
    }
    type="checkbox" />
</div>
`;

exports[`components/Switch disabled when "true" a disabled checkbox is rendered 1`] = `
<div
  className=" __style_df"
  style={
    Object {
      "MozBoxSizing": "border-box",
      "MozUserSelect": "none",
      "WebkitAlignItems": "stretch",
      "WebkitBoxAlign": "stretch",
      "WebkitBoxDirection": "normal",
      "WebkitBoxOrient": "vertical",
      "WebkitFlexBasis": "auto",
      "WebkitFlexDirection": "column",
      "WebkitFlexShrink": 0,
      "WebkitUserSelect": "none",
      "alignItems": "stretch",
      "backgroundColor": "transparent",
      "borderBottomStyle": "solid",
      "borderBottomWidth": "0px",
      "borderLeftStyle": "solid",
      "borderLeftWidth": "0px",
      "borderRightStyle": "solid",
      "borderRightWidth": "0px",
      "borderTopStyle": "solid",
      "borderTopWidth": "0px",
      "boxSizing": "border-box",
      "color": "inherit",
      "cursor": "default",
      "display": null,
      "flexBasis": "auto",
      "flexDirection": "column",
      "flexShrink": 0,
      "font": "inherit",
      "height": "20px",
      "listStyle": "none",
      "marginBottom": "0px",
      "marginLeft": "0px",
      "marginRight": "0px",
      "marginTop": "0px",
      "minHeight": "0px",
      "minWidth": "0px",
      "msFlexAlign": "stretch",
      "msFlexDirection": "column",
      "msFlexNegative": 0,
      "msPreferredSize": "auto",
      "msUserSelect": "none",
      "paddingBottom": "0px",
      "paddingLeft": "0px",
      "paddingRight": "0px",
      "paddingTop": "0px",
      "position": "relative",
      "textAlign": "inherit",
      "textDecoration": "none",
      "userSelect": "none",
      "width": "40px",
    }
  }>
  <div
    className=" __style_df"
    style={
      Object {
        "MozBoxSizing": "border-box",
        "WebkitAlignItems": "stretch",
        "WebkitBoxAlign": "stretch",
        "WebkitBoxDirection": "normal",
        "WebkitBoxOrient": "vertical",
        "WebkitFlexBasis": "auto",
        "WebkitFlexDirection": "column",
        "WebkitFlexShrink": 0,
        "WebkitTransitionDuration": "0.1s",
        "alignItems": "stretch",
        "backgroundColor": "#D5D5D5",
        "borderBottomLeftRadius": "10px",
        "borderBottomRightRadius": "10px",
        "borderBottomStyle": "solid",
        "borderBottomWidth": "0px",
        "borderLeftStyle": "solid",
        "borderLeftWidth": "0px",
        "borderRightStyle": "solid",
        "borderRightWidth": "0px",
        "borderTopLeftRadius": "10px",
        "borderTopRightRadius": "10px",
        "borderTopStyle": "solid",
        "borderTopWidth": "0px",
        "bottom": "0px",
        "boxSizing": "border-box",
        "color": "inherit",
        "display": null,
        "flexBasis": "auto",
        "flexDirection": "column",
        "flexShrink": 0,
        "font": "inherit",
        "height": "70%",
        "left": "0px",
        "listStyle": "none",
        "marginBottom": "auto",
        "marginLeft": "auto",
        "marginRight": "auto",
        "marginTop": "auto",
        "minHeight": "0px",
        "minWidth": "0px",
        "msFlexAlign": "stretch",
        "msFlexDirection": "column",
        "msFlexNegative": 0,
        "msPreferredSize": "auto",
        "paddingBottom": "0px",
        "paddingLeft": "0px",
        "paddingRight": "0px",
        "paddingTop": "0px",
        "position": "absolute",
        "right": "0px",
        "textAlign": "inherit",
        "textDecoration": "none",
        "top": "0px",
        "transitionDuration": "0.1s",
        "width": "90%",
      }
    } />
  <div
    className=" __style_df"
    style={
      Object {
        "MozBoxSizing": "border-box",
        "WebkitAlignItems": "stretch",
        "WebkitAlignSelf": "flex-start",
        "WebkitBoxAlign": "stretch",
        "WebkitBoxDirection": "normal",
        "WebkitBoxOrient": "vertical",
        "WebkitFlexBasis": "auto",
        "WebkitFlexDirection": "column",
        "WebkitFlexShrink": 0,
        "WebkitTransform": "translateX(0%)",
        "WebkitTransitionDuration": "0.1s",
        "alignItems": "stretch",
        "alignSelf": "flex-start",
        "backgroundColor": "#BDBDBD",
        "borderBottomLeftRadius": "100%",
        "borderBottomRightRadius": "100%",
        "borderBottomStyle": "solid",
        "borderBottomWidth": "0px",
        "borderLeftStyle": "solid",
        "borderLeftWidth": "0px",
        "borderRightStyle": "solid",
        "borderRightWidth": "0px",
        "borderTopLeftRadius": "100%",
        "borderTopRightRadius": "100%",
        "borderTopStyle": "solid",
        "borderTopWidth": "0px",
        "boxShadow": "0px 1px 3px rgba(0,0,0,0.5)",
        "boxSizing": "border-box",
        "color": "inherit",
        "display": null,
        "flexBasis": "auto",
        "flexDirection": "column",
        "flexShrink": 0,
        "font": "inherit",
        "height": "20px",
        "listStyle": "none",
        "marginBottom": "0px",
        "marginLeft": "0px",
        "marginRight": "0px",
        "marginTop": "0px",
        "minHeight": "0px",
        "minWidth": "0px",
        "msFlexAlign": "stretch",
        "msFlexDirection": "column",
        "msFlexItemAlign": "start",
        "msFlexNegative": 0,
        "msPreferredSize": "auto",
        "msTransform": "translateX(0%)",
        "paddingBottom": "0px",
        "paddingLeft": "0px",
        "paddingRight": "0px",
        "paddingTop": "0px",
        "position": "relative",
        "textAlign": "inherit",
        "textDecoration": "none",
        "transform": "translateX(0%)",
        "transitionDuration": "0.1s",
        "width": "20px",
      }
    } />
  <input
    checked={false}
    className=""
    disabled={true}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    style={
      Object {
        "bottom": "0px",
        "cursor": "inherit",
        "height": "100%",
        "left": "0px",
        "marginBottom": "0px",
        "marginLeft": "0px",
        "marginRight": "0px",
        "marginTop": "0px",
        "opacity": 0,
        "paddingBottom": "0px",
        "paddingLeft": "0px",
        "paddingRight": "0px",
        "paddingTop": "0px",
        "position": "absolute",
        "right": "0px",
        "top": "0px",
        "width": "100%",
      }
    }
    type="checkbox" />
</div>
`;

exports[`components/Switch value when "false" an unchecked checkbox is rendered 1`] = `
<div
  className=" __style_df"
  style={
    Object {
      "MozBoxSizing": "border-box",
      "MozUserSelect": "none",
      "WebkitAlignItems": "stretch",
      "WebkitBoxAlign": "stretch",
      "WebkitBoxDirection": "normal",
      "WebkitBoxOrient": "vertical",
      "WebkitFlexBasis": "auto",
      "WebkitFlexDirection": "column",
      "WebkitFlexShrink": 0,
      "WebkitUserSelect": "none",
      "alignItems": "stretch",
      "backgroundColor": "transparent",
      "borderBottomStyle": "solid",
      "borderBottomWidth": "0px",
      "borderLeftStyle": "solid",
      "borderLeftWidth": "0px",
      "borderRightStyle": "solid",
      "borderRightWidth": "0px",
      "borderTopStyle": "solid",
      "borderTopWidth": "0px",
      "boxSizing": "border-box",
      "color": "inherit",
      "cursor": "pointer",
      "display": null,
      "flexBasis": "auto",
      "flexDirection": "column",
      "flexShrink": 0,
      "font": "inherit",
      "height": "20px",
      "listStyle": "none",
      "marginBottom": "0px",
      "marginLeft": "0px",
      "marginRight": "0px",
      "marginTop": "0px",
      "minHeight": "0px",
      "minWidth": "0px",
      "msFlexAlign": "stretch",
      "msFlexDirection": "column",
      "msFlexNegative": 0,
      "msPreferredSize": "auto",
      "msUserSelect": "none",
      "paddingBottom": "0px",
      "paddingLeft": "0px",
      "paddingRight": "0px",
      "paddingTop": "0px",
      "position": "relative",
      "textAlign": "inherit",
      "textDecoration": "none",
      "userSelect": "none",
      "width": "40px",
    }
  }>
  <div
    className=" __style_df"
    style={
      Object {
        "MozBoxSizing": "border-box",
        "WebkitAlignItems": "stretch",
        "WebkitBoxAlign": "stretch",
        "WebkitBoxDirection": "normal",
        "WebkitBoxOrient": "vertical",
        "WebkitFlexBasis": "auto",
        "WebkitFlexDirection": "column",
        "WebkitFlexShrink": 0,
        "WebkitTransitionDuration": "0.1s",
        "alignItems": "stretch",
        "backgroundColor": "#939393",
        "borderBottomLeftRadius": "10px",
        "borderBottomRightRadius": "10px",
        "borderBottomStyle": "solid",
        "borderBottomWidth": "0px",
        "borderLeftStyle": "solid",
        "borderLeftWidth": "0px",
        "borderRightStyle": "solid",
        "borderRightWidth": "0px",
        "borderTopLeftRadius": "10px",
        "borderTopRightRadius": "10px",
        "borderTopStyle": "solid",
        "borderTopWidth": "0px",
        "bottom": "0px",
        "boxSizing": "border-box",
        "color": "inherit",
        "display": null,
        "flexBasis": "auto",
        "flexDirection": "column",
        "flexShrink": 0,
        "font": "inherit",
        "height": "70%",
        "left": "0px",
        "listStyle": "none",
        "marginBottom": "auto",
        "marginLeft": "auto",
        "marginRight": "auto",
        "marginTop": "auto",
        "minHeight": "0px",
        "minWidth": "0px",
        "msFlexAlign": "stretch",
        "msFlexDirection": "column",
        "msFlexNegative": 0,
        "msPreferredSize": "auto",
        "paddingBottom": "0px",
        "paddingLeft": "0px",
        "paddingRight": "0px",
        "paddingTop": "0px",
        "position": "absolute",
        "right": "0px",
        "textAlign": "inherit",
        "textDecoration": "none",
        "top": "0px",
        "transitionDuration": "0.1s",
        "width": "90%",
      }
    } />
  <div
    className=" __style_df"
    style={
      Object {
        "MozBoxSizing": "border-box",
        "WebkitAlignItems": "stretch",
        "WebkitAlignSelf": "flex-start",
        "WebkitBoxAlign": "stretch",
        "WebkitBoxDirection": "normal",
        "WebkitBoxOrient": "vertical",
        "WebkitFlexBasis": "auto",
        "WebkitFlexDirection": "column",
        "WebkitFlexShrink": 0,
        "WebkitTransform": "translateX(0%)",
        "WebkitTransitionDuration": "0.1s",
        "alignItems": "stretch",
        "alignSelf": "flex-start",
        "backgroundColor": "#FAFAFA",
        "borderBottomLeftRadius": "100%",
        "borderBottomRightRadius": "100%",
        "borderBottomStyle": "solid",
        "borderBottomWidth": "0px",
        "borderLeftStyle": "solid",
        "borderLeftWidth": "0px",
        "borderRightStyle": "solid",
        "borderRightWidth": "0px",
        "borderTopLeftRadius": "100%",
        "borderTopRightRadius": "100%",
        "borderTopStyle": "solid",
        "borderTopWidth": "0px",
        "boxShadow": "0px 1px 3px rgba(0,0,0,0.5)",
        "boxSizing": "border-box",
        "color": "inherit",
        "display": null,
        "flexBasis": "auto",
        "flexDirection": "column",
        "flexShrink": 0,
        "font": "inherit",
        "height": "20px",
        "listStyle": "none",
        "marginBottom": "0px",
        "marginLeft": "0px",
        "marginRight": "0px",
        "marginTop": "0px",
        "minHeight": "0px",
        "minWidth": "0px",
        "msFlexAlign": "stretch",
        "msFlexDirection": "column",
        "msFlexItemAlign": "start",
        "msFlexNegative": 0,
        "msPreferredSize": "auto",
        "msTransform": "translateX(0%)",
        "paddingBottom": "0px",
        "paddingLeft": "0px",
        "paddingRight": "0px",
        "paddingTop": "0px",
        "position": "relative",
        "textAlign": "inherit",
        "textDecoration": "none",
        "transform": "translateX(0%)",
        "transitionDuration": "0.1s",
        "width": "20px",
      }
    } />
  <input
    checked={false}
    className=""
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    style={
      Object {
        "bottom": "0px",
        "cursor": "inherit",
        "height": "100%",
        "left": "0px",
        "marginBottom": "0px",
        "marginLeft": "0px",
        "marginRight": "0px",
        "marginTop": "0px",
        "opacity": 0,
        "paddingBottom": "0px",
        "paddingLeft": "0px",
        "paddingRight": "0px",
        "paddingTop": "0px",
        "position": "absolute",
        "right": "0px",
        "top": "0px",
        "width": "100%",
      }
    }
    type="checkbox" />
</div>
`;

exports[`components/Switch value when "true" a checked checkbox is rendered 1`] = `
<div
  className=" __style_df"
  style={
    Object {
      "MozBoxSizing": "border-box",
      "MozUserSelect": "none",
      "WebkitAlignItems": "stretch",
      "WebkitBoxAlign": "stretch",
      "WebkitBoxDirection": "normal",
      "WebkitBoxOrient": "vertical",
      "WebkitFlexBasis": "auto",
      "WebkitFlexDirection": "column",
      "WebkitFlexShrink": 0,
      "WebkitUserSelect": "none",
      "alignItems": "stretch",
      "backgroundColor": "transparent",
      "borderBottomStyle": "solid",
      "borderBottomWidth": "0px",
      "borderLeftStyle": "solid",
      "borderLeftWidth": "0px",
      "borderRightStyle": "solid",
      "borderRightWidth": "0px",
      "borderTopStyle": "solid",
      "borderTopWidth": "0px",
      "boxSizing": "border-box",
      "color": "inherit",
      "cursor": "pointer",
      "display": null,
      "flexBasis": "auto",
      "flexDirection": "column",
      "flexShrink": 0,
      "font": "inherit",
      "height": "20px",
      "listStyle": "none",
      "marginBottom": "0px",
      "marginLeft": "0px",
      "marginRight": "0px",
      "marginTop": "0px",
      "minHeight": "0px",
      "minWidth": "0px",
      "msFlexAlign": "stretch",
      "msFlexDirection": "column",
      "msFlexNegative": 0,
      "msPreferredSize": "auto",
      "msUserSelect": "none",
      "paddingBottom": "0px",
      "paddingLeft": "0px",
      "paddingRight": "0px",
      "paddingTop": "0px",
      "position": "relative",
      "textAlign": "inherit",
      "textDecoration": "none",
      "userSelect": "none",
      "width": "40px",
    }
  }>
  <div
    className=" __style_df"
    style={
      Object {
        "MozBoxSizing": "border-box",
        "WebkitAlignItems": "stretch",
        "WebkitBoxAlign": "stretch",
        "WebkitBoxDirection": "normal",
        "WebkitBoxOrient": "vertical",
        "WebkitFlexBasis": "auto",
        "WebkitFlexDirection": "column",
        "WebkitFlexShrink": 0,
        "WebkitTransitionDuration": "0.1s",
        "alignItems": "stretch",
        "backgroundColor": "#A3D3CF",
        "borderBottomLeftRadius": "10px",
        "borderBottomRightRadius": "10px",
        "borderBottomStyle": "solid",
        "borderBottomWidth": "0px",
        "borderLeftStyle": "solid",
        "borderLeftWidth": "0px",
        "borderRightStyle": "solid",
        "borderRightWidth": "0px",
        "borderTopLeftRadius": "10px",
        "borderTopRightRadius": "10px",
        "borderTopStyle": "solid",
        "borderTopWidth": "0px",
        "bottom": "0px",
        "boxSizing": "border-box",
        "color": "inherit",
        "display": null,
        "flexBasis": "auto",
        "flexDirection": "column",
        "flexShrink": 0,
        "font": "inherit",
        "height": "70%",
        "left": "0px",
        "listStyle": "none",
        "marginBottom": "auto",
        "marginLeft": "auto",
        "marginRight": "auto",
        "marginTop": "auto",
        "minHeight": "0px",
        "minWidth": "0px",
        "msFlexAlign": "stretch",
        "msFlexDirection": "column",
        "msFlexNegative": 0,
        "msPreferredSize": "auto",
        "paddingBottom": "0px",
        "paddingLeft": "0px",
        "paddingRight": "0px",
        "paddingTop": "0px",
        "position": "absolute",
        "right": "0px",
        "textAlign": "inherit",
        "textDecoration": "none",
        "top": "0px",
        "transitionDuration": "0.1s",
        "width": "90%",
      }
    } />
  <div
    className=" __style_df"
    style={
      Object {
        "MozBoxSizing": "border-box",
        "WebkitAlignItems": "stretch",
        "WebkitAlignSelf": "flex-start",
        "WebkitBoxAlign": "stretch",
        "WebkitBoxDirection": "normal",
        "WebkitBoxOrient": "vertical",
        "WebkitFlexBasis": "auto",
        "WebkitFlexDirection": "column",
        "WebkitFlexShrink": 0,
        "WebkitTransform": "translateX(100%)",
        "WebkitTransitionDuration": "0.1s",
        "alignItems": "stretch",
        "alignSelf": "flex-start",
        "backgroundColor": "#009688",
        "borderBottomLeftRadius": "100%",
        "borderBottomRightRadius": "100%",
        "borderBottomStyle": "solid",
        "borderBottomWidth": "0px",
        "borderLeftStyle": "solid",
        "borderLeftWidth": "0px",
        "borderRightStyle": "solid",
        "borderRightWidth": "0px",
        "borderTopLeftRadius": "100%",
        "borderTopRightRadius": "100%",
        "borderTopStyle": "solid",
        "borderTopWidth": "0px",
        "boxShadow": "0px 1px 3px rgba(0,0,0,0.5)",
        "boxSizing": "border-box",
        "color": "inherit",
        "display": null,
        "flexBasis": "auto",
        "flexDirection": "column",
        "flexShrink": 0,
        "font": "inherit",
        "height": "20px",
        "listStyle": "none",
        "marginBottom": "0px",
        "marginLeft": "0px",
        "marginRight": "0px",
        "marginTop": "0px",
        "minHeight": "0px",
        "minWidth": "0px",
        "msFlexAlign": "stretch",
        "msFlexDirection": "column",
        "msFlexItemAlign": "start",
        "msFlexNegative": 0,
        "msPreferredSize": "auto",
        "msTransform": "translateX(100%)",
        "paddingBottom": "0px",
        "paddingLeft": "0px",
        "paddingRight": "0px",
        "paddingTop": "0px",
        "position": "relative",
        "textAlign": "inherit",
        "textDecoration": "none",
        "transform": "translateX(100%)",
        "transitionDuration": "0.1s",
        "width": "20px",
      }
    } />
  <input
    checked={true}
    className=""
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    style={
      Object {
        "bottom": "0px",
        "cursor": "inherit",
        "height": "100%",
        "left": "0px",
        "marginBottom": "0px",
        "marginLeft": "0px",
        "marginRight": "0px",
        "marginTop": "0px",
        "opacity": 0,
        "paddingBottom": "0px",
        "paddingLeft": "0px",
        "paddingRight": "0px",
        "paddingTop": "0px",
        "position": "absolute",
        "right": "0px",
        "top": "0px",
        "width": "100%",
      }
    }
    type="checkbox" />
</div>
`;
